--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+   "keywords": {
+    "discord",
+    "discord-bot",
+    "discord",
+    "discordjs",
+     "node",
+     "js"
+     },
   "author": "centopw",
   "license": "ISC",
   "dependencies": {
